[package]
name = "poetic"
version = "0.2.0"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/poetic"
license = "MIT"
description = "library to parse and interpret poetic source code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"], optional = true }

[features]
wasm = ["dep:getrandom"]
