[package]
name = "poetic"
version = "0.3.0"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/poetic"
license = "MIT"
description = "library to parse and interpret poetic source code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"], optional = true }
split-digits = "0.2.2"

[features]
wasm = ["dep:getrandom"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
lto = true